# kafka-backup-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/terminal-profiles/: alacritty.toml  kitty.conf  wezterm.lua
scenarios/: backup-only.yaml  full-backup-restore.yaml  pitr-demo.yaml  restore-only.yaml  three-phase-restore.yaml
scripts/: export-social.sh  record-demo.sh
src/: app.rs  config.rs  main.rs
src/dashboard/: footer.rs  header.rs  layout.rs  log_panel.rs  mod.rs  partitions.rs  pipeline.rs  summary.rs  three_phase.rs
src/data/: demo_engine.rs  events.rs  mod.rs  models.rs
src/effects/: celebrations.rs  continuous.rs  disaster.rs  mod.rs  transitions.rs
src/recording/: frame_export.rs  mod.rs
src/theme/: colors.rs
src/widgets/: data_flow.rs  mod.rs  pipeline_stage.rs  pitr_timeline.rs
